--- a/styles/app.css
+++ b/styles/app.css
@@ -16,6 +16,7 @@
   --lightBlue: #A2EEE5;
   --darkBlue: #8EA2EA;
   --red: #F09D9D;
+  --red_2: #b10000;
 
   --font-family-titles: 'Dosis', sans-serif;
   --font-family-text: 'Red Hat Display', sans-serif;
@@ -87,22 +88,28 @@ button {
   cursor: pointer;
 }
 
+/* .main_container_app{
+  margin: 0 auto;
+  max-width: 768px;
+  padding: 0 24px;
+} */
 
 /* Shared */
-.header-container, .trendingPreview-header, .categoriesPreview-container {
+.header-container, .trendingPreview-header, .categoriesPreview-container, .liked-header {
   padding: 0 24px;
 }
 
-.trendingPreview-container, .categoriesPreview-container, footer {
+.trendingPreview-container, .categoriesPreview-container, .liked-container, footer {
   margin-top: 48px;
 }
 
-.trendingPreview-header, .categoriesPreview-title {
+.trendingPreview-header, .categoriesPreview-title, .liked-header {
   margin-bottom: 24px;
 }
 
 .movie-container {
   cursor: pointer;
+  position: relative;
 }
 
 .movie-container--loading{
@@ -124,6 +131,38 @@ button {
 .movie-img {
   border-radius: 8px;
   min-height: 175px;
+}
+
+.movie-btn{
+  position: absolute;
+  top: 5px;
+  right: 10px;
+  height: 30px;
+  width: 30px;
+  border-radius: 30px;
+  padding: 0;
+  margin: 0;
+}
+
+.movie-btn:hover {
+  background-color: var(--purple-medium-1);
+  transform: scale(1.1);
+  transition: all 0.3s ease;
+}
+
+
+.movie-btn:before {
+  content: '❤';
+  font-size: 20px;
+}
+
+.movie-btn--liked {
+  background-color: var(--red_2);
+  box-shadow: 0 0 0 2px var(--purple-light-1);
+}
+
+.movie-btn--liked::before {
+  content: '👍';
 }
 
 .categoriesPreview-list, .categories-list {
@@ -192,7 +231,9 @@ button {
 
 
 /* Trending */
-.trendingPreview-header {
+.trendingPreview-header,
+.liked-header
+{
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -204,7 +245,9 @@ button {
   width: 72px;
 }
 
-.trendingPreview-movieList {
+.trendingPreview-movieList,
+.liked-movieList
+{
   overflow-x: scroll;
   overflow-y: hidden;
   white-space: nowrap;
@@ -213,12 +256,14 @@ button {
   padding-bottom: 16px;
 }
 
-.trendingPreview-movieList .movie-container {
+.trendingPreview-movieList .movie-container,
+.liked-movieList .movie-container {
   display: inline-block;
   margin-right: 8px;
 }
 
-.trendingPreview-movieList .movie-container .movie-img {
+.trendingPreview-movieList .movie-container .movie-img,
+.liked-container .movie-container .movie-img {
   height: 225px;
   min-height: 225px;
   max-height: 225px;
